<resources>
    <string name="app_name">Kitchener\'s Map</string>
    <string name="title_activity_maps">Kitchener\'s Map</string>
    <string name="select_language">Γλώσσα:</string>
    <string name="menu_item_types_of_places">Σημεία Ενδιαφέροντος</string>
    <string name="menu_item_search">Αναζήτηση σημείου</string>
    <string name="menu_item_about_the_application">Σχετικά με την εφαρμογή</string>
    <string name="menu_item_feedback">Ανατροφοδότηση</string>
    <string name="menu_item_opacity_slider">Χαρτογραφικό Υπόβραθρο</string>
    <string name="about_heading_1">Σχετικά με την εφαρμογή</string>
    <string name="about_heading_2">Η αποτύπωση του Kitchener</string>
    <string name="about_paragraph_1">Το 1885 εκδόθηκε στο Λονδίνο από τον Edward Stanford, της οδού 55 Charing
        Cross, S.W., ο χάρτης του Horatio Herbert Kitchener που προέκυψε από την πρώτη επιστημονική χαρτογράφηση της
        Κύπρου.
    </string>
    <string name="about_paragraph_2">Ο χάρτης τυπώθηκε σε δεκαέξι φύλλα και αποτέλεσε χαρτογραφικό πρότυπο
        έως τα μέσα του 20ού αιώνα. Ο χάρτης αυτός, ο οποίος θεωρείται κομβικής σημασίας για τη χαρτογραφία
        της Κύπρου, περιέχει πληθώρα αξιόλογων πληροφοριών γεωγραφικού, ιστορικού αλλά και πολιτισμικού
        ενδιαφέροντος για το νησί. Πολλές από αυτές τις πληροφορίες χρήζουν, ακόμα και στις μέρες μας,
        προσεκτικής διερεύνησης από την επιστημονική κοινότητα.
    </string>
    <string name="about_paragraph_3">Με δεδομένο το ιδιαίτερο ενδιαφέρον του Sylvia Ioannou Foundation για την
        ιστορική χαρτογραφία της Κύπρου, αλλά και το ενδιαφέρον του Τμήματος Γεωγραφίας του Χαροκοπείου
        Πανεπιστημίου για την επιστημονική προσέγγιση ανάλογων θεμάτων, αναπτύχθηκε η παρούσα εφαρμογή
        του χάρτη του Kitchener για την Κύπρο.
    </string>
    <string name="about_paragraph_4">Επομένως, η εφαρμογή, εκτός από την ιδιαίτερη αξία της για τη
        Χαρτογραφία, τη Γεωγραφία, την Ιστορία και τον πολιτισμό της Κύπρου, φιλοδοξεί να αποτελέσει εφαλτήριο
        διεπιστημονικής συνεργασίας και να προσφέρει την απαραίτητη τεχνογνωσία για τη μελλοντική ανάπτυξη
        παρεμφερών ερευνητικών έργων.
    </string>
    <string name="about_paragraph_5">Κατά την περίοδο της Οθωμανικής Αυτοκρατορίας λειτουργούσε στην Κύπρο
        Οθωμανικός Κώδικας Γαιών, δηλαδή κτηματολόγιο όπου καταγράφονταν με σκαριφήματα και περιγραφές στα τουρκικά όλες
        οι συναλλαγές και οι κτήσεις γης. Με την έλευση της Αγγλοκρατίας (1878) κατέστη αναγκαία η μετάφραση του Κώδικα,
        διαδικασία εξαιρετικά χρονοβόρα, καθώς και η δημιουργία ενός σύγχρονου χάρτη για τη διοίκηση και την ανάπτυξη
        του νησιού.
    </string>
    <string name="about_paragraph_6">Προκειμένου να χαρτογραφήσει το νέο προτεκτοράτο της Βρετανικής
        Αυτοκρατορίας, ο 28χρονος απεσταλμένος του Υπουργείου Εξωτερικών χωρομέτρης Horatio Herbert Kitchener
        συναντήθηκε με τον Βρετανό Ύπατο Αρμοστή Sir Garnet Wolseley στο Μετόχι του Κύκκου, λίγο έξω από τη Λευκωσία,
        στις 15 Σεπτεμβρίου 1878. Ο Wolseley χρειαζόταν μια καταγραφή για το επόμενο οικονομικό έτος, ενώ ο Kitchener
        οραματιζόταν ένα χάρτη που θα αποτελούσε ‘υπόδειγμα στο είδος του, και οι ακαδημαϊκοί και οι αρχαιολόγοι του
        μέλλοντος θα του ήταν υπόχρεοι στο διηνεκές’. Οι δύο άνδρες ήλθαν σε ρήξη και τον επόμενο χρόνο οι εργασίες
        τριγωνισμού εγκαταλείφθηκαν λόγω έλλειψης πόρων. Το 1880 ο νέος Ύπατος Αρμοστής του νησιού Sir Robert Biddulph
        κάλεσε τον Kitchener να επιστρέψει. Ο Kitchener έφερε μαζί του τον George Gordon Hake, μια αμφιλεγόμενη
        προσωπικότητα, προκειμένου να συλλέξει αντικείμενα από ανασκαφές στο Κούριον και στη Σαλαμίνα και να τα πουλήσει
        για να χρηματοδοτήσει τη χωρομέτρηση του νησιού. Τα ευρήματα δεν ήταν σημαντικά, διότι τους είχε προλάβει ο
        Luigi Palma di Cesnola, και τελικά όσα συνελέγησαν καταγράφηκαν ερασιτεχνικά και διεσπάρησαν σε βρετανικά
        μουσεία. Στις αρμοδιότητες του Kitchener στην Κύπρο ήταν και η οργάνωση και μεταρρύθμιση του Κτηματολογίου για
        τη δίκαιη και ορθολογική μέθοδο μεταβίβασης γης και φορολόγησης των καλλιεργειών σε ολόκληρο το νησί.
    </string>
    <string name="about_paragraph_7">Το 1883 η καταγραφή είχε ολοκληρωθεί και το Κτηματολόγιο είχε οργανωθεί. Το
        1885 ο εκδότης χαρτών Edward Stanford διαφήμισε τον χάρτη που προέκυψε ως εξής (εδώ σε μετάφραση):
    </string>
    <string name="about_paragraph_8">Χαράχθηκε σε [...] πλάκες χαλκού [...] όταν συντίθενται μαζί ως ενιαίος
        χάρτης οι διαστάσεις είναι 12 πόδια και 6 ίντσες επί 7 πόδια [...] Δείχνει τις επαρχίες και τις υποδιαιρέσεις
        τους [...] τους δρόμους που έχουν κατασκευασθεί και τις γραμμές του τηλεγράφου που ανεγέρθηκαν [...] τους
        αμπελώνες και τα δάση από έλατα και άλλα δέντρα· αδρές σχηματικές αποτυπώσεις των πόλεων και των χωριών,
        διακρίνοντας τα μουσουλμανικά και τα χριστιανικά χωριά· δίνει τις ελληνικές και τις τουρκικές ονομασίες, και
        ταυτοποιεί τους αρχαίους χώρους, με ξεχωριστούς τύπους. Σημειώνονται υδραγωγεία, πηγές, πηγάδια, μονές, ερείπια
        και άλλα ιδιαίτερα χαρακτηριστικά. Παρέχονται ακόμη σε γενικές γραμμές υψόμετρα λόφων και βουνών, πόλεων και
        χωριών, από τη στάθμη της θάλασσας, και ορόσημα αποστάσεων, οι οποίες γράφονται δίπλα σε μίλια, όπως ίσχυαν κατά
        την τελική αναθεώρηση. [...] Είναι η πρώτη χωρομέτρηση που πραγματοποιήθηκε ποτέ σε αυτό το ενδιαφέρον νησί, και
        αποτελεί αφεαυτή ένα ευγενές αποτέλεσμα της Αγγλικής Κατοχής.
    </string>
    <string name="about_paragraph_9">Το ερώτημα που τέθηκε από το Sylvia Ioannou Foundation στο Τμήμα Γεωγραφίας
        του Χαροκοπείου Πανεπιστημίου είναι κατά πόσο ισχύουν τα όσα διαφήμιζε o Stanford και πόσο πλησίασε το όραμά του
        ο Kitchener.
    </string>
    <string name="about_paragraph_10">Φεύγοντας από την Κύπρο, ο Kitchener συνέχισε τη στρατιωτική του καριέρα. Οι
        περίφημες νίκες του στο Σουδάν και στη Νότιο Αφρική του απέφεραν τον τίτλο του Υποκόμη, αλλά και τον
        χαρακτηρισμό ‘Στρατηγός χωρίς ψυχή’. Το 1914, στο ξέσπασμα του Α΄ Παγκοσμίου Πολέμου και ενώ ήταν αρχηγός
        στρατού των Ινδιών, ανεκλήθη από τον Βρετανό Πρωθυπουργό H. H. Asquith για να αναλάβει Υπουργός Πολέμου. Η φήμη
        και η επιρροή του Kitchener ήταν τόσο μεγάλη ώστε, σε σύνολο 2.675.149 εθελοντών που κατετάγησαν στη διάρκεια
        των τεσσάρων ετών του Πολέμου, οι 462.901 ενεγράφησαν τον Σεπτέμβριο του 1914, όταν κυκλοφόρησε η διάσημη πλέον
        αφίσα στρατολόγησης με τη φωτογραφία του.
    </string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="title_activity_send_mail" translatable="false">SendMailActivity</string>
    <string name="feedback_comment_label">Σχόλιο:</string>
    <string name="feedback_takePhoto_button">Φωτογραφία</string>
    <string name="feedback_sendMail_button">Αποστολή Email</string>
    <string name="feedBackInstuctions_text">Η εφαρμογή υποστηρίζει τη δυνατότητα αποστολής μιας τοποθεσίας μαζί με το
        σχόλιο και τη φωτογραφίας σας. Για να το κάνετε αυτό, πατήστε παρατεταμένα πάνω σε ένα σημείο στο χάρτη και
        έπειτα πατήστε στο παράθυρο πάνω απο την πινέζα.
    </string>
    <string name="types_of_places_banks">Τράπεζες</string>
    <string name="types_of_places_museum">Μουσεία</string>
    <string name="types_of_places_hospitals">Νοσοκομεία</string>
    <string name="types_of_places_political">Πολιτικού ενδιαφέροντος</string>
    <string name="types_of_places_lodging">Καταλύματα</string>
    <string name="types_of_places_library">Βιβλιοθήκες</string>
    <string name="types_of_places_restaurant">Εστιατόρια</string>
    <string name="types_of_places_supermarket">Σουπερμάρκετ</string>
    <string name="style_json" translatable="false">
        [
            {
                "elementType": "labels",
                "stylers": [
                    {
                    "visibility": "off"
                    }
                ]
            }
        ]
    </string>
    <string name="types_of_places_coffee_shops">Καφετέριες</string>
</resources>