<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_large"
                android:text="@string/select_language"
                android:gravity="center"/>

        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/greek_flag"
                android:layout_marginLeft="10dp"
                android:id="@+id/greek_language"/>

        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/english_flag"
                android:layout_marginLeft="15dp"
                android:id="@+id/english_language"/>

    </LinearLayout>

    <include layout="@layout/partial_divider"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_types_of_places"
            android:paddingLeft="@dimen/menu_item_padding_horizontal"
            android:paddingTop="@dimen/menu_item_padding_vertical"
            android:paddingBottom="@dimen/menu_item_padding_vertical"
            android:paddingRight="@dimen/menu_item_padding_horizontal"
            android:textSize="@dimen/text_medium"
            android:id="@+id/nav_types_of_places"/>

    <include layout="@layout/partial_divider"/>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_search"
            android:paddingLeft="@dimen/menu_item_padding_horizontal"
            android:paddingTop="@dimen/menu_item_padding_vertical"
            android:paddingBottom="@dimen/menu_item_padding_vertical"
            android:paddingRight="@dimen/menu_item_padding_horizontal"
            android:textSize="@dimen/text_medium"
            android:id="@+id/nav_search"/>

    <include layout="@layout/partial_divider"/>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_about_the_application"
            android:paddingLeft="@dimen/menu_item_padding_horizontal"
            android:paddingTop="@dimen/menu_item_padding_vertical"
            android:paddingBottom="@dimen/menu_item_padding_vertical"
            android:paddingRight="@dimen/menu_item_padding_horizontal"
            android:textSize="@dimen/text_medium"
            android:id="@+id/nav_about"/>

    <include layout="@layout/partial_divider"/>

    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_opacity_slider"
            android:paddingVertical="@dimen/menu_item_padding_vertical"
            android:paddingHorizontal="@dimen/menu_item_padding_horizontal"
            android:textSize="@dimen/text_medium"
            android:gravity="left|center"
            android:layoutDirection="rtl"
            android:id="@+id/nav_opacity_slider"/>

    <include layout="@layout/partial_divider"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_feedback"
            android:paddingLeft="@dimen/menu_item_padding_horizontal"
            android:paddingTop="@dimen/menu_item_padding_vertical"
            android:paddingBottom="@dimen/menu_item_padding_vertical"
            android:paddingRight="@dimen/menu_item_padding_horizontal"
            android:textSize="@dimen/text_medium"
            android:id="@+id/nav_feedback"/>

<!--    <include layout="@layout/partial_divider"/>-->
<!--    -->
<!--    <Switch-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text=""-->
<!--            android:paddingLeft="@dimen/menu_item_padding_horizontal"-->
<!--            android:paddingTop="@dimen/menu_item_padding_vertical"-->
<!--            android:paddingBottom="@dimen/menu_item_padding_vertical"-->
<!--            android:paddingRight="@dimen/menu_item_padding_horizontal"-->
<!--            android:textSize="@dimen/text_medium"/>-->

</LinearLayout>